Completed chapter 10 !!! its 5am yassss

--- a/demo_app/public/stylesheets/custom.css
+++ b/demo_app/public/stylesheets/custom.css
@@ -105,3 +105,9 @@ color: #09c;
 nav ul li a:hover {
 text-decoration: underline;
 }
+ul.users {
+margin-top: 1em;
+}
+.users li {
+list-style: none;
+}
